src/core_server/internal/parsing/stream_declaration/autogenerated/STREAM_DECLARATIONParser.cpp

// Generated from STREAM_DECLARATION.g4 by ANTLR 4.12.0


#include "STREAM_DECLARATIONVisitor.h"

#include "STREAM_DECLARATIONParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct STREAM_DECLARATIONParserStaticData final {
  STREAM_DECLARATIONParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  STREAM_DECLARATIONParserStaticData(const STREAM_DECLARATIONParserStaticData&) = delete;
  STREAM_DECLARATIONParserStaticData(STREAM_DECLARATIONParserStaticData&&) = delete;
  STREAM_DECLARATIONParserStaticData& operator=(const STREAM_DECLARATIONParserStaticData&) = delete;
  STREAM_DECLARATIONParserStaticData& operator=(STREAM_DECLARATIONParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag stream_declarationParserOnceFlag;
STREAM_DECLARATIONParserStaticData *stream_declarationParserStaticData = nullptr;

void stream_declarationParserInitialize() {
  assert(stream_declarationParserStaticData == nullptr);
  auto staticData = std::make_unique<STREAM_DECLARATIONParserStaticData>(
    std::vector<std::string>{
      "parse", "error", "core_stmt", "core_declaration", "event_declaration", 
      "attribute_dec_list", "attribute_declaration", "datatype", "stream_declaration", 
      "event_list", "core_query", "selection_strategy", "result_values", 
      "core_pattern", "partition_list", "attribute_list", "consumption_policy", 
      "filter", "bool_expr", "string_literal", "string_literal_or_regexp", 
      "math_expr", "value_seq", "number_seq", "string_seq", "time_window", 
      "event_span", "time_span", "hour_span", "minute_span", "second_span", 
      "custom_span", "named_event", "s_event_name", "event_name", "stream_name", 
      "attribute_name", "integer", "number", "string", "any_name", "keyword"
    },
    std::vector<std::string>{
      "", "'('", "')'", "','", "'int'", "'string'", "'double'", "'long'", 
      "'boolean'", "'['", "']'", "'{'", "'}'", "'..'", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "'%'", "'+'", "'-'", "'*'", "'/'", 
      "'<'", "'<='", "'>'", "'>='", "", "", "';'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "K_ALL", "K_AND", 
      "K_ANY", "K_AS", "K_BY", "K_CONSUME", "K_DECLARE", "K_DISTINCT", "K_EVENT", 
      "K_EVENTS", "K_FILTER", "K_FROM", "K_HOURS", "K_IN", "K_LAST", "K_LIKE", 
      "K_MAX", "K_MINUTES", "K_NEXT", "K_NONE", "K_NOT", "K_OR", "K_PARTITION", 
      "K_SECONDS", "K_SELECT", "K_STREAM", "K_STRICT", "K_UNLESS", "K_WHERE", 
      "K_WITHIN", "PERCENT", "PLUS", "MINUS", "STAR", "SLASH", "LE", "LEQ", 
      "GE", "GEQ", "EQ", "NEQ", "SEMICOLON", "IDENTIFIER", "FLOAT_LITERAL", 
      "INTEGER_LITERAL", "NUMERICAL_EXPONENT", "STRING_LITERAL", "REGEXP", 
      "SINGLE_LINE_COMMENT", "MULTILINE_COMMENT", "SPACES", "UNEXPECTED_CHAR"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  stream_declarationParserStaticData = staticData.release();
}

}

STREAM_DECLARATIONParser::STREAM_DECLARATIONParser(TokenStream *input) : STREAM_DECLARATIONParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

STREAM_DECLARATIONParser::STREAM_DECLARATIONParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  STREAM_DECLARATIONParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *stream_declarationParserStaticData->atn, stream_declarationParserStaticData->decisionToDFA, stream_declarationParserStaticData->sharedContextCache, options);
}

STREAM_DECLARATIONParser::~STREAM_DECLARATIONParser() {
  delete _interpreter;
}

const atn::ATN& STREAM_DECLARATIONParser::getATN() const {
  return *stream_declarationParserStaticData->atn;
}

std::string STREAM_DECLARATIONParser::getGrammarFileName() const {
  return "STREAM_DECLARATION.g4";
}

const std::vector<std::string>& STREAM_DECLARATIONParser::getRuleNames() const {
  return stream_declarationParserStaticData->ruleNames;
}

const dfa::Vocabulary& STREAM_DECLARATIONParser::getVocabulary() const {
  return stream_declarationParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView STREAM_DECLARATIONParser::getSerializedATN() const {
  return stream_declarationParserStaticData->serializedATN;
}


//----------------- ParseContext ------------------------------------------------------------------

STREAM_DECLARATIONParser::ParseContext::ParseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* STREAM_DECLARATIONParser::ParseContext::EOF() {
  return getToken(STREAM_DECLARATIONParser::EOF, 0);
}

std::vector<STREAM_DECLARATIONParser::Core_stmtContext *> STREAM_DECLARATIONParser::ParseContext::core_stmt() {
  return getRuleContexts<STREAM_DECLARATIONParser::Core_stmtContext>();
}

STREAM_DECLARATIONParser::Core_stmtContext* STREAM_DECLARATIONParser::ParseContext::core_stmt(size_t i) {
  return getRuleContext<STREAM_DECLARATIONParser::Core_stmtContext>(i);
}

std::vector<STREAM_DECLARATIONParser::ErrorContext *> STREAM_DECLARATIONParser::ParseContext::error() {
  return getRuleContexts<STREAM_DECLARATIONParser::ErrorContext>();
}

STREAM_DECLARATIONParser::ErrorContext* STREAM_DECLARATIONParser::ParseContext::error(size_t i) {
  return getRuleContext<STREAM_DECLARATIONParser::ErrorContext>(i);
}


size_t STREAM_DECLARATIONParser::ParseContext::getRuleIndex() const {
  return STREAM_DECLARATIONParser::RuleParse;
}


std::any STREAM_DECLARATIONParser::ParseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STREAM_DECLARATIONVisitor*>(visitor))
    return parserVisitor->visitParse(this);
  else
    return visitor->visitChildren(this);
}

STREAM_DECLARATIONParser::ParseContext* STREAM_DECLARATIONParser::parse() {
  ParseContext *_localctx = _tracker.createInstance<ParseContext>(_ctx, getState());
  enterRule(_localctx, 0, STREAM_DECLARATIONParser::RuleParse);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(88);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (((((_la - 20) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 20)) & 35184372350977) != 0)) {
      setState(86);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case STREAM_DECLARATIONParser::K_DECLARE:
        case STREAM_DECLARATIONParser::K_SELECT: {
          setState(84);
          core_stmt();
          break;
        }

        case STREAM_DECLARATIONParser::UNEXPECTED_CHAR: {
          setState(85);
          error();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(90);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(91);
    match(STREAM_DECLARATIONParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ErrorContext ------------------------------------------------------------------

STREAM_DECLARATIONParser::ErrorContext::ErrorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* STREAM_DECLARATIONParser::ErrorContext::UNEXPECTED_CHAR() {
  return getToken(STREAM_DECLARATIONParser::UNEXPECTED_CHAR, 0);
}


size_t STREAM_DECLARATIONParser::ErrorContext::getRuleIndex() const {
  return STREAM_DECLARATIONParser::RuleError;
}


std::any STREAM_DECLARATIONParser::ErrorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STREAM_DECLARATIONVisitor*>(visitor))
    return parserVisitor->visitError(this);
  else
    return visitor->visitChildren(this);
}

STREAM_DECLARATIONParser::ErrorContext* STREAM_DECLARATIONParser::error() {
  ErrorContext *_localctx = _tracker.createInstance<ErrorContext>(_ctx, getState());
  enterRule(_localctx, 2, STREAM_DECLARATIONParser::RuleError);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(93);
    antlrcpp::downCast<ErrorContext *>(_localctx)->unexpected_charToken = match(STREAM_DECLARATIONParser::UNEXPECTED_CHAR);

         throw new RuntimeException("UNEXPECTED_CHAR=" + (antlrcpp::downCast<ErrorContext *>(_localctx)->unexpected_charToken != nullptr ? antlrcpp::downCast<ErrorContext *>(_localctx)->unexpected_charToken->getText() : ""));
       
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Core_stmtContext ------------------------------------------------------------------

STREAM_DECLARATIONParser::Core_stmtContext::Core_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

STREAM_DECLARATIONParser::Core_queryContext* STREAM_DECLARATIONParser::Core_stmtContext::core_query() {
  return getRuleContext<STREAM_DECLARATIONParser::Core_queryContext>(0);
}

STREAM_DECLARATIONParser::Core_declarationContext* STREAM_DECLARATIONParser::Core_stmtContext::core_declaration() {
  return getRuleContext<STREAM_DECLARATIONParser::Core_declarationContext>(0);
}


size_t STREAM_DECLARATIONParser::Core_stmtContext::getRuleIndex() const {
  return STREAM_DECLARATIONParser::RuleCore_stmt;
}


std::any STREAM_DECLARATIONParser::Core_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STREAM_DECLARATIONVisitor*>(visitor))
    return parserVisitor->visitCore_stmt(this);
  else
    return visitor->visitChildren(this);
}

STREAM_DECLARATIONParser::Core_stmtContext* STREAM_DECLARATIONParser::core_stmt() {
  Core_stmtContext *_localctx = _tracker.createInstance<Core_stmtContext>(_ctx, getState());
  enterRule(_localctx, 4, STREAM_DECLARATIONParser::RuleCore_stmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(98);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case STREAM_DECLARATIONParser::K_SELECT: {
        enterOuterAlt(_localctx, 1);
        setState(96);
        core_query();
        break;
      }

      case STREAM_DECLARATIONParser::K_DECLARE: {
        enterOuterAlt(_localctx, 2);
        setState(97);
        core_declaration();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Core_declarationContext ------------------------------------------------------------------

STREAM_DECLARATIONParser::Core_declarationContext::Core_declarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

STREAM_DECLARATIONParser::Event_declarationContext* STREAM_DECLARATIONParser::Core_declarationContext::event_declaration() {
  return getRuleContext<STREAM_DECLARATIONParser::Event_declarationContext>(0);
}

STREAM_DECLARATIONParser::Stream_declarationContext* STREAM_DECLARATIONParser::Core_declarationContext::stream_declaration() {
  return getRuleContext<STREAM_DECLARATIONParser::Stream_declarationContext>(0);
}


size_t STREAM_DECLARATIONParser::Core_declarationContext::getRuleIndex() const {
  return STREAM_DECLARATIONParser::RuleCore_declaration;
}


std::any STREAM_DECLARATIONParser::Core_declarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STREAM_DECLARATIONVisitor*>(visitor))
    return parserVisitor->visitCore_declaration(this);
  else
    return visitor->visitChildren(this);
}

STREAM_DECLARATIONParser::Core_declarationContext* STREAM_DECLARATIONParser::core_declaration() {
  Core_declarationContext *_localctx = _tracker.createInstance<Core_declarationContext>(_ctx, getState());
  enterRule(_localctx, 6, STREAM_DECLARATIONParser::RuleCore_declaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(102);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(100);
      event_declaration();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(101);
      stream_declaration();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Event_declarationContext ------------------------------------------------------------------

STREAM_DECLARATIONParser::Event_declarationContext::Event_declarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* STREAM_DECLARATIONParser::Event_declarationContext::K_DECLARE() {
  return getToken(STREAM_DECLARATIONParser::K_DECLARE, 0);
}

tree::TerminalNode* STREAM_DECLARATIONParser::Event_declarationContext::K_EVENT() {
  return getToken(STREAM_DECLARATIONParser::K_EVENT, 0);
}

STREAM_DECLARATIONParser::Event_nameContext* STREAM_DECLARATIONParser::Event_declarationContext::event_name() {
  return getRuleContext<STREAM_DECLARATIONParser::Event_nameContext>(0);
}

STREAM_DECLARATIONParser::Attribute_dec_listContext* STREAM_DECLARATIONParser::Event_declarationContext::attribute_dec_list() {
  return getRuleContext<STREAM_DECLARATIONParser::Attribute_dec_listContext>(0);
}


size_t STREAM_DECLARATIONParser::Event_declarationContext::getRuleIndex() const {
  return STREAM_DECLARATIONParser::RuleEvent_declaration;
}


std::any STREAM_DECLARATIONParser::Event_declarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STREAM_DECLARATIONVisitor*>(visitor))
    return parserVisitor->visitEvent_declaration(this);
  else
    return visitor->visitChildren(this);
}

STREAM_DECLARATIONParser::Event_declarationContext* STREAM_DECLARATIONParser::event_declaration() {
  Event_declarationContext *_localctx = _tracker.createInstance<Event_declarationContext>(_ctx, getState());
  enterRule(_localctx, 8, STREAM_DECLARATIONParser::RuleEvent_declaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(104);
    match(STREAM_DECLARATIONParser::K_DECLARE);
    setState(105);
    match(STREAM_DECLARATIONParser::K_EVENT);
    setState(106);
    event_name();
    setState(107);
    match(STREAM_DECLARATIONParser::T__0);
    setState(108);
    attribute_dec_list();
    setState(109);
    match(STREAM_DECLARATIONParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Attribute_dec_listContext ------------------------------------------------------------------

STREAM_DECLARATIONParser::Attribute_dec_listContext::Attribute_dec_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<STREAM_DECLARATIONParser::Attribute_declarationContext *> STREAM_DECLARATIONParser::Attribute_dec_listContext::attribute_declaration() {
  return getRuleContexts<STREAM_DECLARATIONParser::Attribute_declarationContext>();
}

STREAM_DECLARATIONParser::Attribute_declarationContext* STREAM_DECLARATIONParser::Attribute_dec_listContext::attribute_declaration(size_t i) {
  return getRuleContext<STREAM_DECLARATIONParser::Attribute_declarationContext>(i);
}


size_t STREAM_DECLARATIONParser::Attribute_dec_listContext::getRuleIndex() const {
  return STREAM_DECLARATIONParser::RuleAttribute_dec_list;
}


std::any STREAM_DECLARATIONParser::Attribute_dec_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STREAM_DECLARATIONVisitor*>(visitor))
    return parserVisitor->visitAttribute_dec_list(this);
  else
    return visitor->visitChildren(this);
}

STREAM_DECLARATIONParser::Attribute_dec_listContext* STREAM_DECLARATIONParser::attribute_dec_list() {
  Attribute_dec_listContext *_localctx = _tracker.createInstance<Attribute_dec_listContext>(_ctx, getState());
  enterRule(_localctx, 10, STREAM_DECLARATIONParser::RuleAttribute_dec_list);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(120);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case STREAM_DECLARATIONParser::T__1: {
        enterOuterAlt(_localctx, 1);

        break;
      }

      case STREAM_DECLARATIONParser::IDENTIFIER: {
        enterOuterAlt(_localctx, 2);
        setState(112);
        attribute_declaration();
        setState(117);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == STREAM_DECLARATIONParser::T__2) {
          setState(113);
          match(STREAM_DECLARATIONParser::T__2);
          setState(114);
          attribute_declaration();
          setState(119);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Attribute_declarationContext ------------------------------------------------------------------

STREAM_DECLARATIONParser::Attribute_declarationContext::Attribute_declarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

STREAM_DECLARATIONParser::Attribute_nameContext* STREAM_DECLARATIONParser::Attribute_declarationContext::attribute_name() {
  return getRuleContext<STREAM_DECLARATIONParser::Attribute_nameContext>(0);
}

STREAM_DECLARATIONParser::DatatypeContext* STREAM_DECLARATIONParser::Attribute_declarationContext::datatype() {
  return getRuleContext<STREAM_DECLARATIONParser::DatatypeContext>(0);
}


size_t STREAM_DECLARATIONParser::Attribute_declarationContext::getRuleIndex() const {
  return STREAM_DECLARATIONParser::RuleAttribute_declaration;
}


std::any STREAM_DECLARATIONParser::Attribute_declarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STREAM_DECLARATIONVisitor*>(visitor))
    return parserVisitor->visitAttribute_declaration(this);
  else
    return visitor->visitChildren(this);
}

STREAM_DECLARATIONParser::Attribute_declarationContext* STREAM_DECLARATIONParser::attribute_declaration() {
  Attribute_declarationContext *_localctx = _tracker.createInstance<Attribute_declarationContext>(_ctx, getState());
  enterRule(_localctx, 12, STREAM_DECLARATIONParser::RuleAttribute_declaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(122);
    attribute_name();
    setState(123);
    datatype();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DatatypeContext ------------------------------------------------------------------

STREAM_DECLARATIONParser::DatatypeContext::DatatypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* STREAM_DECLARATIONParser::DatatypeContext::IDENTIFIER() {
  return getToken(STREAM_DECLARATIONParser::IDENTIFIER, 0);
}


size_t STREAM_DECLARATIONParser::DatatypeContext::getRuleIndex() const {
  return STREAM_DECLARATIONParser::RuleDatatype;
}


std::any STREAM_DECLARATIONParser::DatatypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STREAM_DECLARATIONVisitor*>(visitor))
    return parserVisitor->visitDatatype(this);
  else
    return visitor->visitChildren(this);
}

STREAM_DECLARATIONParser::DatatypeContext* STREAM_DECLARATIONParser::datatype() {
  DatatypeContext *_localctx = _tracker.createInstance<DatatypeContext>(_ctx, getState());
  enterRule(_localctx, 14, STREAM_DECLARATIONParser::RuleDatatype);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(125);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 72057594037928432) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Stream_declarationContext ------------------------------------------------------------------

STREAM_DECLARATIONParser::Stream_declarationContext::Stream_declarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* STREAM_DECLARATIONParser::Stream_declarationContext::K_DECLARE() {
  return getToken(STREAM_DECLARATIONParser::K_DECLARE, 0);
}

tree::TerminalNode* STREAM_DECLARATIONParser::Stream_declarationContext::K_STREAM() {
  return getToken(STREAM_DECLARATIONParser::K_STREAM, 0);
}
